# sahara-plugin-ambari

./: .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  lower-constraints.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst
doc/source/user/: ambari-plugin.rst  index.rst
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ne/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/pt_BR/LC_MESSAGES/: releasenotes.po
sahara_plugin_ambari/: i18n.py
sahara_plugin_ambari/locale/de/LC_MESSAGES/: sahara_plugin_ambari.po
sahara_plugin_ambari/locale/en_GB/LC_MESSAGES/: sahara_plugin_ambari.po
sahara_plugin_ambari/locale/id/LC_MESSAGES/: sahara_plugin_ambari.po
sahara_plugin_ambari/plugins/ambari/: client.py  configs.py  deploy.py  edp_engine.py  ha_helper.py  health.py  plugin.py  validation.py
sahara_plugin_ambari/plugins/ambari/resources/: generate_config.py
sahara_plugin_ambari/tests/: __init__.py
sahara_plugin_ambari/tests/unit/plugins/ambari/: test_client.py  test_common.py  test_configs.py  test_deploy.py  test_ha_helper.py  test_health.py  test_open_ports.py  test_plugin.py  test_requests_helper.py  test_validation.py
