[metadata]
name = sahara-plugin-ambari
summary = Ambari Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_plugin_ambari

[entry_points]
sahara.cluster.plugins =
    ambari  = sahara_plugin_ambari.plugins.ambari.plugin:AmbariPluginProvider

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[compile_catalog]
directory = sahara_plugin_ambari/locale
domain = sahara_plugin_ambari

[update_catalog]
domain = sahara_plugin_ambari
output_dir = sahara_plugin_ambari/locale
input_file = sahara_plugin_ambari/locale/sahara_plugin_ambari.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_ambari/locale/sahara_plugin_ambari.pot

[wheel]
universal = 1
