[metadata]
name = sahara-plugin-ambari
summary = Ambari Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
python-requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[files]
packages =
    sahara_plugin_ambari

[entry_points]
sahara.cluster.plugins =
    ambari  = sahara_plugin_ambari.plugins.ambari.plugin:AmbariPluginProvider

[compile_catalog]
directory = sahara_plugin_ambari/locale
domain = sahara_plugin_ambari

[update_catalog]
domain = sahara_plugin_ambari
output_dir = sahara_plugin_ambari/locale
input_file = sahara_plugin_ambari/locale/sahara_plugin_ambari.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_ambari/locale/sahara_plugin_ambari.pot
